Issue with spells not loading the spell name solved, and some data.name changed to item.name

--- a/src/templates/items/ammo/ammo.hbs
+++ b/src/templates/items/ammo/ammo.hbs
@@ -10,7 +10,7 @@
           hideTitle=true
           inputType="text"
           inputName=(concat "name")
-          inputValue=data.name
+          inputValue=item.name
         }}
       </div>
     {{/"systems/animabf/templates/common/ui/group-header.hbs"}}
