--- a/src/templates/items/psychicPower/psychicPower.hbs
+++ b/src/templates/items/psychicPower/psychicPower.hbs
@@ -14,7 +14,7 @@
               hideTitle=true
               inputType="text"
               inputName=(concat "name")
-              inputValue=data.name
+              inputValue=item.name
             }}
           </div>
           <div class='second-row'>
