--- a/src/templates/items/spell/spell.hbs
+++ b/src/templates/items/spell/spell.hbs
@@ -14,7 +14,7 @@
               hideTitle=true
               inputType="text"
               inputName="name"
-              inputValue=system.name
+              inputValue=item.name
             }}
           </div>
           <div class='second-row'>
