--- a/src/templates/actor/parts/general/parts/experience.hbs
+++ b/src/templates/actor/parts/general/parts/experience.hbs
@@ -16,14 +16,14 @@
     </div>
     <div class='experience-values flex mt-1'>
       <input
-        name='data.general.experience.current.value'
+        name='system.general.experience.current.value'
         type='number'
         class='input current-experience {{#is "gte" system.general.experience.current.value system.general.experience.next.value }}red{{/is}}'
         value='{{system.general.experience.current.value}}'
       />
       /
       <input
-        name='data.general.experience.next.value'
+        name='system.general.experience.next.value'
         type='number'
         class='input next-experience'
         value='{{system.general.experience.next.value}}'
