Fix (ActorSheet): rolling initiative from actor sheet now uses the correct die

--- a/src/templates/actor/parts/header/parts/common-resources.hbs
+++ b/src/templates/actor/parts/header/parts/common-resources.hbs
@@ -31,6 +31,7 @@
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="initiative-base"
         rollable=true
+        rollableDice='1d100Initiative'
         title=(localize 'anima.ui.general.initiative.base.title')
         inputName="system.characteristics.secondaries.initiative.base.value"
         inputValue=system.characteristics.secondaries.initiative.base.value
