Fix: now the total levels is calculated from the registered categories

--- a/src/templates/actor/parts/general/parts/level.hbs
+++ b/src/templates/actor/parts/general/parts/level.hbs
@@ -12,7 +12,7 @@
     "systems/animabf/templates/common/ui/group-header-title.hbs"
       title=(localize 'anima.ui.levelSection.title')
     }}
-    <input type='number' class='input' />
+    <input type='number' class='input' value='{{calculateLevels system.general.levels}}' disabled='true'/>
   {{/"systems/animabf/templates/common/ui/group-header.hbs"}}
   {{#> "systems/animabf/templates/common/ui/group-body.hbs"
     class="level"
