fix: makes input field for base language bigger

--- a/src/scss/actor/parts/general.scss
+++ b/src/scss/actor/parts/general.scss
@@ -177,6 +177,9 @@
       .group-body {
         .base-language {
           align-items: center;
+          .input-container {
+            width: 10rem;
+          }
         }
 
         .language-row {
