fix: shows the max number of languages one can learn on the actor sheet
This assumes the table from excel calculating the maximum number of languages a character can learn in terms of its inteligence

--- a/src/templates/actor/parts/general/parts/language.hbs
+++ b/src/templates/actor/parts/general/parts/language.hbs
@@ -12,7 +12,7 @@
     "systems/animabf/templates/common/ui/group-header-title.hbs"
       title=(localize 'anima.ui.languageSection.title')
     }}
-    <input type='number' class='input' />
+    <input type='number' class='input' value='{{calculateLanguages system.characteristics.primaries.intelligence.value}}' disabled='true'/>
   {{/"systems/animabf/templates/common/ui/group-header.hbs"}}
   {{#> "systems/animabf/templates/common/ui/group-body.hbs"
     class="languages"
