--- a/src/templates/dialog/combat/combat-defense/parts/mystic.hbs
+++ b/src/templates/dialog/combat/combat-defense/parts/mystic.hbs
@@ -11,8 +11,8 @@
   disabled=this.defenseSent
   inputName='defender.mystic.magicProjectionType'
 }}
+  <option {{#if (is "eq" this.defender.mystic.magicProjectionType 'defensive')}}selected{{/if}} value='defensive'>{{concat (localize 'macros.combat.dialog.magicProjection.defensive.title') " (" this.defender.actor.system.mystic.magicProjection.imbalance.defensive.final.value ")" }}</option>
   <option {{#if (is "eq" this.defender.mystic.magicProjectionType 'normal')}}selected{{/if}} value='normal'>{{concat (localize 'macros.combat.dialog.magicProjection.normal.title') " (" this.defender.actor.system.mystic.magicProjection.final.value ")" }}</option>
-  <option {{#if (is "eq" this.defender.mystic.magicProjectionType 'defensive')}}selected{{/if}} value='defensive'>{{concat (localize 'macros.combat.dialog.magicProjection.defensive.title') " (" this.defender.actor.system.mystic.magicProjection.imbalance.offensive.final.value ")" }}</option>
 {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
 
 {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
@@ -20,9 +20,9 @@
   disabled=this.defenseSent
   inputName='defender.mystic.spellUsed'
 }}
-  {{#each this.defender.actor.system.mystic.spells}}
+  {{#each_when this.defender.actor.system.mystic.spells "system" "spellType" "value" "defense"}}
     <option {{#if (is "eq" this._id ../this.defender.mystic.spellUsed)}}selected{{/if}} value='{{this._id}}'>{{this.name}}</option>
-  {{/each}}
+  {{/each_when}}
 {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
 
 {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
