WIP combat automation

--- a/src/scss/actor/parts/psychic.scss
+++ b/src/scss/actor/parts/psychic.scss
@@ -203,6 +203,16 @@
                 height: 1.5rem;
               }
             }
+            .discipline {
+              .input {
+                height: 1.5rem;
+              }
+            }
+            .macro {
+              .input {
+                height: 1.5rem;
+              }
+            }
           }
         }
 
