--- a/src/scss/items/psychic-power/psychic-power.scss
+++ b/src/scss/items/psychic-power/psychic-power.scss
@@ -101,6 +101,17 @@
               height: 1.5rem;
             }
           }
+          .discipline {
+            .input {
+              height: 1.5rem;
+            }
+          }
+          .macro {
+            .input {
+              height: 1.5rem;
+              width: 8rem;
+            }
+          }
         }
       }
 
