--- a/src/templates/dialog/combat/combat-defense/parts/combat.hbs
+++ b/src/templates/dialog/combat/combat-defense/parts/combat.hbs
@@ -56,6 +56,19 @@
   <option {{#if (is "eq" this.defender.combat.multipleDefensesPenalty -90)}}selected{{/if}} value="-90">5ª {{localize 'macros.combat.dialog.defending.defend.title'}}</option>
 {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
 
+<div class='columns'>
+  <div>
+    {{>
+    "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+    title=(localize 'macros.combat.dialog.combat.accumulateDefenses.title')
+    disabled=this.defenseSent
+    inputType="checkbox"
+    inputName="defender.combat.accumulateDefenses"
+    inputValue=(is 'eq' this.defender.combat.accumulateDefenses true)
+    }}
+  </div>
+</div>
+
 {{#if this.defenseSent}}
   <div class='defense-sent'>
     {{>'systems/animabf/templates/common/ui/loading-indicator.hbs' class="big"}}
