--- a/src/templates/actor/parts/mystic/parts/zeon.hbs
+++ b/src/templates/actor/parts/mystic/parts/zeon.hbs
@@ -26,5 +26,12 @@
       inputName="system.mystic.zeon.accumulated.value"
       inputValue=system.mystic.zeon.accumulated.value
     }}
+    {{>
+    "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+      class="zeonMaintained"
+      title=(localize "anima.ui.mystic.zeonMaintained.title")
+      inputName="system.mystic.zeonMaintained.value"
+      inputValue=system.mystic.zeonMaintained.value
+    }}
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
 {{/"systems/animabf/templates/common/ui/group.hbs"}}
