--- a/src/scss/actor/parts/header.scss
+++ b/src/scss/actor/parts/header.scss
@@ -89,8 +89,8 @@
   .modifiers {
     .first-row {
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-column-gap: 1rem;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-column-gap: 0.25rem;
     }
   }
   // Modifiers
