--- a/src/templates/actor/parts/header/parts/modifiers.hbs
+++ b/src/templates/actor/parts/header/parts/modifiers.hbs
@@ -13,22 +13,45 @@
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="physical"
         title=(localize "anima.ui.general.modifiers.physicalActions.title")
-        inputName="system.general.modifiers.physicalActions.value"
-        inputValue=system.general.modifiers.physicalActions.value
+        inputName="system.general.modifiers.physicalActions.special.value"
+        inputValue=system.general.modifiers.physicalActions.special.value
+        hasSecondaryInput=true
+        disableSecondaryInput=true
+        secondaryInputName=system.general.modifiers.physicalActions.final.value
+        secondaryInputValue=system.general.modifiers.physicalActions.final.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="all-actions"
         title=(localize "anima.ui.general.modifiers.allActions.title")
-        inputName="system.general.modifiers.allActions.base.value"
-        inputValue=system.general.modifiers.allActions.base.value
+        inputName="system.general.modifiers.allActions.special.value"
+        inputValue=system.general.modifiers.allActions.special.value
+        hasSecondaryInput=true
+        disableSecondaryInput=true
+        secondaryInputName=system.general.modifiers.allActions.final.value
+        secondaryInputValue=system.general.modifiers.allActions.final.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="natural-penalty"
-        disabled=true
         title=(localize 'anima.ui.general.naturalPenalty.title')
-        inputValue=system.general.modifiers.naturalPenalty.byWearArmorRequirement.value
+        inputName="system.general.modifiers.naturalPenalty.special.value"
+        inputValue=system.general.modifiers.naturalPenalty.special.value
+        hasSecondaryInput=true
+        disableSecondaryInput=true
+        secondaryInputName=system.general.modifiers.naturalPenalty.final.value
+        secondaryInputValue=system.general.modifiers.naturalPenalty.final.value
+      }}
+      {{>
+      "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+        class="perception-penalty"
+        title=(localize 'anima.ui.general.perceptionPenalty.title')
+        inputName="system.general.modifiers.perceptionPenalty.special.value"
+        inputValue=system.general.modifiers.perceptionPenalty.special.value
+        hasSecondaryInput=true
+        disableSecondaryInput=true
+        secondaryInputName=system.general.modifiers.perceptionPenalty.final.value
+        secondaryInputValue=system.general.modifiers.perceptionPenalty.final.value
       }}
     </div>
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
