--- a/src/templates/actor/parts/psychic/parts/psychic-powers.hbs
+++ b/src/templates/actor/parts/psychic/parts/psychic-powers.hbs
@@ -39,18 +39,17 @@
                 }}
                 {{>
                 'systems/animabf/templates/common/ui/custom-select-choices.hbs'
-                  class="discipline"
-                  disabled=true
-                  choices=xRoot.config.iterables.psychic.disciplines
-                  title=(localize "anima.ui.psychic.psychicPowers.power.header.discipline.title")
-                  inputName=(concat "system.dynamic.psychicPowers." power._id ".system.discipline.value")
-                  inputValue=power.system.discipline.value
+                  class="combat-type"
+                  choices=xRoot.config.iterables.psychic.combatTypes
+                  title=(localize "anima.ui.psychic.psychicPowers.power.header.combatType.title")
+                  inputName=(concat "system.dynamic.psychicPowers." power._id ".system.combatType.value")
+                  inputValue=power.system.combatType.value
                 }}
                 {{>
                 'systems/animabf/templates/common/ui/custom-select-choices.hbs'
                   class="action-type"
                   choices=xRoot.config.iterables.psychic.actionTypes
-                  title=(localize "anima.ui.psychic.psychicPowers.power.footer.actionType.title")
+                  title=(localize "anima.ui.psychic.psychicPowers.power.header.actionType.title")
                   inputName=(concat "system.dynamic.psychicPowers." power._id ".system.actionType.value")
                   inputValue=power.system.actionType.value
                 }}
