--- a/src/templates/dialog/combat/combat-attack/parts/psychic.hbs
+++ b/src/templates/dialog/combat/combat-attack/parts/psychic.hbs
@@ -31,7 +31,7 @@
   disabled=this.attackSent
   inputName='attacker.psychic.powerUsed'
 }}
-  {{#each_when this.attacker.actor.system.psychic.psychicPowers "system" "actionType" "value" "attack"}}
+  {{#each_when this.attacker.actor.system.psychic.psychicPowers "system" "combatType" "value" "attack"}}
     <option {{#if (is "eq" this._id ../this.attacker.psychic.powerUsed)}}selected{{/if}} value='{{this._id}}'>{{this.name}}</option>
   {{/each_when}}
 {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
