--- a/src/templates/dialog/combat/combat-defense/parts/mystic.hbs
+++ b/src/templates/dialog/combat/combat-defense/parts/mystic.hbs
@@ -20,7 +20,7 @@
   disabled=this.defenseSent
   inputName='defender.mystic.spellUsed'
 }}
-  {{#each_when this.defender.actor.system.mystic.spells "system" "spellType" "value" "defense"}}
+  {{#each_when this.defender.actor.system.mystic.spells "system" "combatType" "value" "defense"}}
     <option {{#if (is "eq" this._id ../this.defender.mystic.spellUsed)}}selected{{/if}} value='{{this._id}}'>{{this.name}}</option>
   {{/each_when}}
 {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
