--- a/src/templates/items/psychicPower/psychicPower.hbs
+++ b/src/templates/items/psychicPower/psychicPower.hbs
@@ -46,7 +46,7 @@
             'systems/animabf/templates/common/ui/custom-select-choices.hbs'
               class="action-type"
               choices=xRoot.config.iterables.psychic.actionTypes
-              title=(localize "anima.ui.psychic.psychicPowers.power.footer.actionType.title")
+              title=(localize "anima.ui.psychic.psychicPowers.power.header.actionType.title")
               inputName=(concat "system.actionType.value")
               inputValue=system.actionType.value
             }}
