--- a/src/templates/dialog/combat/combat-attack/parts/psychic.hbs
+++ b/src/templates/dialog/combat/combat-attack/parts/psychic.hbs
@@ -52,6 +52,20 @@
   inputValue=this.attacker.psychic.damage
 }}
 
+{{#if (is 'eq' this.attacker.psychic.distance.enable false)}}
+<div class='columns'>
+  <div>
+    {{>
+      "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+      title=(localize 'macros.combat.dialog.distance.title')
+      inputType="checkbox"
+      inputName="attacker.psychic.distance.check"
+      inputValue=(is 'eq' this.attacker.psychic.distance.check true)
+    }}
+  </div>
+</div>
+{{/if}}
+
 {{#if this.attackSent}}
   <div class='psychic-attack-sent'>
     {{>'systems/animabf/templates/common/ui/loading-indicator.hbs' class="big"}}
