psychic-damage-title

--- a/src/templates/dialog/combat/combat-attack/parts/psychic.hbs
+++ b/src/templates/dialog/combat/combat-attack/parts/psychic.hbs
@@ -46,7 +46,7 @@
 
 {{>
 "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-  title=(localize "macros.combat.dialog.damage.title")
+  title=(localize "macros.combat.dialog.psychic.damage.title")
   disabled=this.attackSent
   inputName="attacker.psychic.damage"
   inputValue=this.attacker.psychic.damage
