--- a/src/templates/actor/parts/psychic/psychic.hbs
+++ b/src/templates/actor/parts/psychic/psychic.hbs
@@ -16,6 +16,9 @@
           <div>
             {{> "systems/animabf/templates/actor/parts/psychic/parts/psychic-disciplines.hbs"}}
           </div>
+          <div>
+            {{> "systems/animabf/templates/actor/parts/psychic/parts/psychic-shields.hbs"}}
+          </div>
         </div>
         <div class='second-row'>
           {{> "systems/animabf/templates/actor/parts/psychic/parts/mental-patterns.hbs"}}
