--- a/src/scss/actor/parts/mystic.scss
+++ b/src/scss/actor/parts/mystic.scss
@@ -266,6 +266,30 @@
     }
     // Prepared Spells
 
+    // Mystic Shields
+    .mystic-shields {
+      .mystic-shield-row:first-child {
+        margin-top: 0;
+      }
+
+      .mystic-shield-row {
+        margin-top: 0.75rem;
+
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        grid-column-gap: 0.1rem;
+
+        .name .input-container {
+          width: 100%;
+        }
+        .grade {
+          margin-top: 0;
+          width: 100%;
+        }
+      }
+    }
+    // Mystic Shields
+
     // Summons
     .summons {
       .summon-row:first-child {
