--- a/src/scss/actor/parts/psychic.scss
+++ b/src/scss/actor/parts/psychic.scss
@@ -7,7 +7,7 @@
 
     .first-row {
       display: grid;
-      grid-template-columns: 1fr 4fr;
+      grid-template-columns: 1fr 23% 2fr;
       grid-column-gap: 1rem;
     }
 
@@ -67,6 +67,26 @@
     }
     // Psychic Disciplines
 
+    // Psychic Shields
+    .psychic-shields {
+      .psychic-shield-row:first-child {
+        margin-top: 0;
+      }
+
+      .psychic-shield-row {
+        margin-top: 0.75rem;
+
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        grid-column-gap: 0.1rem;
+
+        .name .input-container {
+          width: 100%;
+        }
+      }
+    }
+    // Psychic Shields
+
     // Mental Patterns
     .mental-patterns {
       .mental-pattern-row:first-child {
@@ -123,7 +143,7 @@
         justify-content: center;
       }
     }
-    // Mental Patterns
+    // Innate Psychic Powers
   }
 
   .psychic-powers-tab {
