--- a/src/templates/actor/parts/mystic/mystic.hbs
+++ b/src/templates/actor/parts/mystic/mystic.hbs
@@ -27,6 +27,7 @@
           {{> "systems/animabf/templates/actor/parts/mystic/parts/summons.hbs"}}
           {{> "systems/animabf/templates/actor/parts/mystic/parts/metamagics.hbs"}}
           {{> "systems/animabf/templates/actor/parts/mystic/parts/prepared-spells.hbs"}}
+          {{> "systems/animabf/templates/actor/parts/mystic/parts/mystic-shields.hbs"}}
         </div>
       </div>
     </div>
