--- a/src/templates/actor/parts/mystic/mystic.hbs
+++ b/src/templates/actor/parts/mystic/mystic.hbs
@@ -2,6 +2,7 @@
   <nav class="abf-tabs mystic-tabs tabs secondary-tab" data-group="secondary">
     <a class="item active" data-tab="mystic-main">{{localize "anima.ui.mystic.tabs.main"}}</a>
     <a class="item" data-tab="mystic-spells">{{localize "anima.ui.mystic.tabs.secondaries"}}</a>
+    <a class="item" data-tab="mystic-invocations">{{localize "anima.ui.mystic.tabs.invocations"}}</a>
   </nav>
   <section class='mystic-body'>
     <div class='tab' data-group="secondary" data-tab="mystic-main">
@@ -33,6 +34,12 @@
     <div class='tab' data-group="secondary" data-tab="mystic-spells">
       <div class='mystic-spells-tab'>
           {{> "systems/animabf/templates/actor/parts/mystic/parts/spells/spells.hbs"}}
+      </div>
+    </div>
+
+    <div class='tab' data-group="secondary" data-tab="mystic-invocations">
+      <div class='mystic-spells-tab'>
+          {{> "systems/animabf/templates/actor/parts/mystic/parts/invocations/invocations.hbs"}}
       </div>
     </div>
   </section>
